# bellande_humanoid_robot_intelligence_control_system_framework

./: .gitignore  .robotis_framework.rosinstall  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  gpu.Dockerfile  push.sh  repository_recal.sh
docker/: Dockerfile
dynamixel_sdk/: CMakeLists.txt  package.xml
dynamixel_sdk/include/: DynamixelSDK.h
dynamixel_sdk/include/dynamixel_sdk/: GroupBulkRead.h  GroupBulkWrite.h  GroupSyncRead.h  GroupSyncWrite.h  PacketHandler.h  PortHandler.h  Protocol1PacketHandler.h  Protocol2PacketHandler.h  RobotisDef.h  group_bulk_read.h  group_sync_read.h  group_sync_write.h  port_handler.h  protocol1_packet_handler.h  protocol2_packet_handler.h
dynamixel_sdk/include/dynamixel_sdk_linux/: PortHandlerLinux.h
dynamixel_sdk/src/dynamixel_sdk/: GroupBulkRead.cpp  GroupBulkWrite.cpp  GroupSyncRead.cpp  GroupSyncWrite.cpp  PacketHandler.cpp  PortHandler.cpp  Protocol1PacketHandler.cpp  Protocol2PacketHandler.cpp  group_bulk_read.cpp  group_bulk_write.cpp  group_sync_write.cpp  packet_handler.cpp  protocol2_packet_handler.cpp
dynamixel_sdk/src/dynamixel_sdk_linux/: PortHandlerLinux.cpp  port_handler_linux.cpp
git_scripts/: .gitignore
humanoid_robot_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_controller/include/humanoid_robot_controller/: humanoid_robot_controller.h
humanoid_robot_controller/src/humanoid_robot_controller/: humanoid_robot_controller.cpp
humanoid_robot_device/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_device/devices/dynamixel/: PH42-020-S300-R.device  PH54-100-S500-R.device  PH54-200-S500-R.device
humanoid_robot_device/include/humanoid_robot_device/: control_table_item.h  device.h  dynamixel.h  dynamixel_state.h  robot.h  sensor.h  sensor_state.h  time_stamp.h
humanoid_robot_device/src/humanoid_robot_device/: dynamixel.cpp  robot.cpp  sensor.cpp
humanoid_robot_framework/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_framework_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_framework_common/include/humanoid_robot_framework_common/: motion_module.h  sensor_module.h  singleton.h
humanoid_robot_intelligence_control_system_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
humanoid_robot_intelligence_control_system_controller/include/humanoid_robot_intelligence_control_system_controller/: humanoid_robot_intelligence_control_system_controller.h
humanoid_robot_intelligence_control_system_controller/launch/: bellande_controller.launch.py
humanoid_robot_intelligence_control_system_controller/launch/ros1/: bellande_controller.launch
humanoid_robot_intelligence_control_system_controller/src/: BellandeController.py
humanoid_robot_intelligence_control_system_controller/src/humanoid_robot_intelligence_control_system_controller/: humanoid_robot_intelligence_control_system_controller.cpp
humanoid_robot_intelligence_control_system_device/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_intelligence_control_system_device/include/humanoid_robot_intelligence_control_system_device/: control_table_item.h  device.h  dynamixel.h  dynamixel_state.h  robot.h  sensor.h  sensor_state.h  time_stamp.h
humanoid_robot_intelligence_control_system_device/src/humanoid_robot_intelligence_control_system_device/: dynamixel.cpp  robot.cpp  sensor.cpp
humanoid_robot_intelligence_control_system_external_sensors/: package.xml  setup.py
humanoid_robot_intelligence_control_system_framework/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_intelligence_control_system_framework_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_intelligence_control_system_framework_common/include/humanoid_robot_intelligence_control_system_framework_common/: motion_module.h  sensor_module.h  singleton.h
humanoid_robot_intelligence_control_system_speech_detector/: CMakeLists.txt  package.xml  setup.py
humanoid_robot_intelligence_control_system_speech_detector/launch/: speech_detector_processor.launch.py
humanoid_robot_intelligence_control_system_speech_detector/launch/ros1/: speech_detector_processor.launch
humanoid_robot_intelligence_control_system_speech_detector/src/: speech_detection_processor.py
robotis_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_controller/include/robotis_controller/: RobotisController.h  robotis_controller.h
robotis_controller/src/robotis_controller/: RobotisController.cpp  robotis_controller.cpp
robotis_device/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_device/devices/dynamixel/: GRIPPER.device  H42-20-S300-R.device  H54-100-B210-R-NR.device  H54-100-S500-R.device  H54-200-B500-R.device  H54-200-S500-R.device  L42-10-S300-R.device  L54-30-S400-R.device  L54-30-S500-R.device  L54-50-S290-R.device  L54-50-S500-R.device  M42-10-S260-R.device  M54-40-S250-R.device  M54-60-S250-R.device  MX-106.device  MX-28.device  MX-64.device  XM-430-W210.device  XM-430-W350.device  XM-430.device
robotis_device/devices/sensor/: OPEN-CR.device
robotis_device/include/robotis_device/: ControlTableItem.h  Dynamixel.h  DynamixelState.h  Robot.h  Sensor.h  SensorState.h  control_table_item.h  device.h  dynamixel.h  dynamixel_state.h  robot.h  sensor.h  sensor_state.h  time_stamp.h
robotis_device/src/robotis_device/: Dynamixel.cpp  Robot.cpp  Sensor.cpp  dynamixel.cpp  robot.cpp  sensor.cpp
robotis_framework/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_framework_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_framework_common/include/robotis_framework_common/: MotionModule.h  SensorModule.h  motion_module.h  sensor_module.h  singleton.h
robotis_math/: CMakeLists.txt  package.xml
robotis_math/include/robotis_math/: RobotisLinearAlgebra.h  RobotisMath.h  RobotisMathBase.h  robotis_linear_algebra.h  robotis_math.h  robotis_math_base.h  robotis_trajectory_calculator.h
robotis_math/src/: RobotisLinearAlgebra.cpp  RobotisTrajectoryCalculator.cpp  robotis_linear_algebra.cpp  robotis_math_base.cpp  robotis_trajectory_calculator.cpp
(+19 files in other folders)
