<?xml version="1.0"?>
<package>
  <name>dynamixel_sdk</name>
  <version>0.1.0</version>
  <description>The dynamixel_sdk package</description>

  <maintainer email="zerom@robotis.com">robotis</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/dynamixel_sdk</url> -->
  <author email="zerom@robotis.com">ROBOTIS</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>