<?xml version="1.0"?>
<package>
  <name>robotis_controller</name>
  <version>0.1.1</version>
  <description>The robotis_controller package</description>

  <maintainer email="zerom@robotis.com">ROBOTIS</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/robotis_controller</url> -->

  <author email="zerom@robotis.com">ROBOTIS</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>robotis_device</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>

</package>
