<?xml version="1.0"?>
<package format="2">
  <name>robotis_controller</name>
  <version>0.3.0</version>
  <description>robotis_controller package for ROBOTIS's platform like Manipulator-H, THORMANG and OP series</description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <url type="website">http://wiki.ros.org/robotis_controller</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/robotis_framework_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>robotis_controller_msgs</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>robotis_device</build_export_depend>
  <build_export_depend>robotis_framework_common</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robotis_controller_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>robotis_device</exec_depend>
  <exec_depend>robotis_framework_common</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

</package>
